@@ -240,6 +240,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #26685: Raise OSError if closing a socket fails.
+
 - Issue #16329: Add .webm to mimetypes.types_map.  Patch by Giampaolo Rodola'.
 
 - Issue #13952: Add .csv to mimetypes.types_map.  Patch by Geoff Wilson.
